ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: neta-aviv-new
spec:
  controller: k8s.io/ingress-nginx
