wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: neta-aviv-new
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: neta-aviv-new
spec:
  selector:
    app: wordpress
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306
