grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: neta-aviv-new
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: neta-grafana  # Make sure this line is added
  rules:
  - host: a1bb916ad85bd4e77a3d544445565ebb-839766664.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /netagraf
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-grafana
            port:
              number: 80
