ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combined-ingress
  namespace: neta-aviv-new
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: neta-ingress-class  
  rules:
  - host: a1bb916ad85bd4e77a3d544445565ebb-839766664.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /monitoring/(grafana|login)(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kube-prom-stack-grafana
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
